# matrix-arbitrary

./: .ghci  AUTHORS  README.md  matrix-arbitrary.cabal  syncheck.sh
src/: empty-file-template.hs
src/Data/: Matrix.hs
src/Data/Matrix/: Internal.hs
src/Numeric/: MatrixOperations.hs
test/: SimpleMatrixTests.hs
