Name:           matrix-arbitrary
Version:        0.0.0.1
License:        GPL-3
License-File:   LICENSE
Author:         Johannes Weiß
Maintainer:     weiss@tux4u.de
Cabal-Version:  >= 1.10
Build-Type:     Simple
Category:       Math
Description:    An Arbitrary Element Types Linear Algebra Matrix Library for
                Haskell.
Synopsis:       An Arbitrary Element Types Linear Algebra Matrix Library for
                Haskell.

Source-Repository head
    Type:     git
    Location: git://github.com/weissi/matrix-arbitrary.git

Library
    Build-Depends:    base  == 4.*,
                      array == 0.4.*
    Default-Language: Haskell2010
    Exposed-Modules:  Data.Matrix
                      Numeric.MatrixOperations
    Other-Modules:    Data.Matrix.Internal
    HS-Source-Dirs:   src
    GHC-Options:      -Wall
    GHC-Options:      -rtsopts -auto-all -caf-all

Test-Suite SimpleMatrixTests
    Type:             exitcode-stdio-1.0
    Default-Language: Haskell2010
    Build-Depends:    matrix-arbitrary,
                      base == 4.*,
                      HTF == 0.9.*
    HS-Source-Dirs:   test
    Main-Is:          SimpleMatrixTests.hs
